Updated SEER data.